--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 
 a {
     text-decoration: none;
+    
 
 }
 
@@ -19,7 +20,7 @@ body {
     padding: 0;
 }
 .banner {
-    background: url(../img/bannerDany.png.png) center no-repeat;
+    background: url(../img/1.jpg) center no-repeat;
     background-size: cover;
     height: 90vh;
     text-align: center;
@@ -36,7 +37,7 @@ body {
 
 .banner_descricao {
     font-size: 1.5rem;
-    margin: 1rem;
+    margin: 2rem;
 }
 
 .botao {
@@ -51,7 +52,7 @@ body {
 .botao-branco {
     background-color: white;
     color: #7E459B;
-
+    
 
 }
 
@@ -62,23 +63,24 @@ body {
 }
 
 .container {
+
     max-width: 1080px;
     margin: 0 auto;
     padding: 2rem;
+    text-align: justify;
 
 }
 
 
 .sobre{ 
-    margin: 0
-
-
+    margin: 0;
 }
 
 
 .sobre_titulo {
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: 5rem;
+   
 
 }
 
